Revision history for Perl extension TAP::Formatter::JUnit.

{{$NEXT}}

0.13      2021-05-04 10:04:17-07:00 America/Vancouver
    - Fix install of "script/tap2junit"

0.12      2021-01-05 21:23:07-08:00 America/Vancouver
    - Switch to Dist::Zilla for release management.
    - Various POD fixups; syntax, spelling, SYNOPSIS fixes
    - Cleaned up and removed unused variables
    - Bump minimum required Perl to 5.008, as that's the oldest version I can
      still test against.

0.11    Wed Oct  1 13:26 PDT 2014
    - Use "IPC::Run" instead of "IPC::Open2" in tests, to fix problems with
      tests freezing on Windows.

0.10    Mon Sep 29 12:38 PDT 2014
    - Switch from "Test::Differences" to "Test::XML", to eliminate failures due
      to differences in ordering of XML attributes.  Addresses RT#81552
    - Use "File::Spec->null()" to get proper path to NULL.  RT#81200, RT#82227.
    - Moved POD tests to "xt/" directory.
    - Move timing sensitive tests to "xt/" directory, as they can cause
      spurious failures for people.  While _I_ want to make sure they run
      successfully, that's about my checking functionality as opposed to
      verifying if things will run successfully on your own system.  RT#69777.

0.09    Wed Jan 25 15:13 PST 2012
    - Switch from Class::Field to Moose.  Thanks to Dave Lambley for the poke,
      and the patience.
    - Track and report timings for "(init)" and "(teardown)" of the test.
      Without this, Hudson does not properly report on the total time needed
      for a test suite (it calculates total time by adding up the constituent
      tests, not by looking at the <testsuite> "time" attribute).
    - Rewrite internals, switching from a streaming style to an iterative style
      of processing the TAP.  Same results, but easier to work with.

0.08    Thu Jul 15 23:44 PDT 2010
    - RT#58838, "Error reporting on die or missing plan".  Thanks to Colin